--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
             Comparative Glucose Response by Nutrient Focus and Health Group
         </h1>
         <p style="font-size: 16px; color: #4a5568; margin-bottom: 20px; text-align: center;">
-            <b>Dataset Overview:</b> The CGMacros dataset provides multimodal information from continuous glucose monitors (CGM), food macronutrients, food photographs, and physical activity, along with anonymized participant demographics, anthropometric measurements, and health parameters. It includes data from 45 participants (15 healthy, 16 pre-diabetic, and 14 with Type 2 diabetes) who consumed meals with varying macronutrient compositions over ten days. This dataset is a valuable resource for advancing research in personalized nutrition and automated diet monitoring.
-        </p>
-        <p style="font-size: 16px; color: #4a5568; margin-bottom: 20px; text-align: center;">
             <b>Research Question:</b> How do different types of meals affect blood sugar levels in people with different health conditions?
         </p>
         <div id="controls">
@@ -59,6 +56,14 @@
                 <div id="donutChart"></div>
             </div>
         </div>
+        <details class="dataset-overview">
+            <summary>Data</summary>
+            <div class="overview-content">
+              <p>
+                <b>Dataset Overview:</b> The CGMacros dataset provides multimodal information from continuous glucose monitors (CGM), food macronutrients, food photographs, and physical activity, along with anonymized participant demographics, anthropometric measurements, and health parameters. It includes data from 45 participants (15 healthy, 16 pre-diabetic, and 14 with Type 2 diabetes) who consumed meals with varying macronutrient compositions over ten days. This dataset is a valuable resource for advancing research in personalized nutrition and automated diet monitoring.
+              </p>
+            </div>
+        </details>
     </div>
     <script src="script.js"></script>
 </body>
